examples/nameresolution/Trait.an
trait Foo a b with
    foo: fn a -> b
    bar: a

impl Foo I32 String with
    foo _x = "test"
    baz = 2  // error: baz not in foo
    // error: missing definition of foo

main () =
    foo 3
    bar : Unit

// args: --check
// expected stderr:
// examples/nameresolution/Trait.an:7:0	error: Expected an unindent but found a newline
//     baz = 2  // error: baz not in foo
// 
// examples/nameresolution/Trait.an:11:4	error: `foo` is not defined, was it a typo?
//     foo 3
// 
// examples/nameresolution/Trait.an:12:4	error: `bar` is not defined, was it a typo?
//     bar : Unit

